remove obsolete methods from IOUtils class and replace with standard JDK equivalents